--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Poppins:wght@300;600;700;800&display=swap");
+
 body {
-    background: hsl(0, 0%, 8%);
-    color: white;
+  background: hsl(0, 0%, 8%);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+}
+
+.box {
+  background-color: hsl(0, 0%, 12%);
+  border-radius: 24px;
+  padding: 25px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.pfp, .role {
+    border-radius: 50%;
+    margin: 30px;
+    color: hsl(0, 2%, 74%)
+}
+
+#location {
+    color: hsl(75, 94%, 57%);
 }
