--- a/style.css
+++ b/style.css
@@ -3,32 +3,33 @@
 body {
   background: hsl(0, 0%, 8%);
   color: white;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  min-height: 100vh;
-  font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
+}
+
+.box > div {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  flex-direction: column;
 }
 
 .box {
   background-color: hsl(0, 0%, 12%);
   border-radius: 24px;
   padding: 25px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
 }
 
-.pfp, .role {
-    border-radius: 50%;
-    margin: 30px;
-    color: hsl(0, 2%, 74%)
+.pfp,
+.role {
+  border-radius: 50%;
+  margin: 20px;
+  color: hsl(0, 2%, 74%);
 }
 
 #location {
-    color: hsl(75, 94%, 57%);
+  color: hsl(75, 94%, 57%);
 }
