--- a/style.css
+++ b/style.css
@@ -56,6 +56,6 @@ body {
 
 .buttons > a:hover {
   color: black;
-  background-color: #c4f82a; /* Neon green */
+  background-color: #c4f82a; 
   box-shadow: 0 0 8px rgba(196, 248, 42, 0.4);
 }
